<resources>
    <string name="app_name">WaveRadio</string>
    <string name="menu">Menu</string>
    <string name="settings">Settings</string>
    <string name="station_logo">Station Logo</string>
    <string name="sleep_timer">Sleep Timer</string>
    <string name="favorite">Favorite</string>
    <string name="mute">Mute</string>
    <string name="previous">Previous</string>
    <string name="play_pause">Play/Pause</string>
    <string name="next">Next</string>
    <string name="recent">Recent</string>
</resources>
